fix search collection and tokenizers